# Runsestone

./: AGENTS.md  DEPLOY.md  READINESS.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
runestone-app/: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
runestone-app/.github/: dependabot.yml
runestone-app/.github/workflows/: ci.yml
runestone-app/crates/runestone-core/: Cargo.toml
runestone-app/crates/runestone-core/migrations/: 001_init.sql  003_embedding_jobs.sql  004_vector_index.sql
runestone-app/crates/runestone-core/src/: context.rs  db.rs  dispatch.rs  document.rs  embedding.rs  error.rs  lib.rs  llm.rs  models.rs  path_guard.rs  util.rs
runestone-app/crates/runestone-core/src/handlers/: ai.rs  composer.rs  document.rs  embeddings.rs  extraction.rs  graph.rs  graph_query.rs  mod.rs  node.rs  properties.rs  search.rs  tag.rs  templates.rs  vault.rs  versions.rs
runestone-app/crates/runestone-core/src/models/: chat.rs  extraction.rs  graph.rs  node.rs  obsidian.rs  properties.rs  search.rs  vault.rs  version.rs
runestone-app/crates/runestone-core/src/repositories/: graph_repo.rs  mod.rs  node_repo.rs  search_repo.rs
runestone-app/crates/runestone-core/src/services/: graph_sync.rs  mod.rs  vault_sync.rs
runestone-app/crates/runestone-server/: Cargo.toml
runestone-app/crates/runestone-server/src/: lib.rs  main.rs
runestone-app/deploy/: deploy.sh  nginx.conf
runestone-app/docs/: remote-mode.md
runestone-app/extensions/chrome/: background.js
runestone-app/migrations/pg/: 002_wiki_links_unique.sql
runestone-app/scripts/: check-bindings.mjs
runestone-app/seed-data/Concepts/: Knowledge Graphs.md  Semantic Search.md
runestone-app/seed-data/Daily/: 2026-05-03.md
runestone-app/seed-data/Entities/: Neo4j.md  Ollama.md  PostgreSQL.md
runestone-app/seed-data/Notes/: Ideas.md  Meeting Notes.md
runestone-app/seed-data/Projects/: Architecture.md  Getting Started.md
runestone-app/seed-data/Reflections/: Learning Journey.md
runestone-app/seed-data/Research/: Graph Theory.md  Vector Databases.md
runestone-app/seed-data/Templates/: Daily Note Template.md
runestone-app/seed-data/Unsorted/: Random Note.md
runestone-app/src-tauri/: Cargo.toml  tauri.conf.json
runestone-app/src-tauri/src/: desktop_dispatch.rs  error.rs  lib.rs  main.rs  models.rs  remote_api.rs  router.rs  state.rs  vault_watcher.rs
runestone-app/src-tauri/src/commands/: ai.rs  clipper.rs  composer.rs  document.rs  embeddings.rs  export.rs  extraction.rs  graph.rs  mod.rs  node.rs  obsidian.rs  plugins.rs  properties.rs  search.rs  server.rs  tag.rs  templates.rs  vault.rs  versions.rs
runestone-app/src-tauri/src/models/: tag.rs
runestone-app/src-tauri/src/repositories/: mod.rs  node_repo.rs
runestone-app/src-tauri/src/services/: graph_sync.rs  mod.rs
runestone-app/src/__tests__/: App.test.tsx  store.test.ts
runestone-app/src/lib/: api.ts  bindings.ts  plugin-manager.ts  types.ts
runestone-app/src/store/: ai-slice.ts  clipper-slice.ts  extraction-slice.ts  graph-slice.ts  index.ts  node-slice.ts  obsidian-slice.ts  plugin-slice.ts  properties-slice.ts  search-slice.ts  tab-slice.ts  tag-slice.ts  ui-slice.ts  vault-slice.ts  versions-slice.ts
(+65 files in other folders)
