[package]
name = "runestone"
version = "0.1.0"
description = "Personal Knowledge Graph App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
runestone-core = { path = "../crates/runestone-core" }
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate"] }
neo4rs = "0.8"
log = "0.4"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
walkdir = "2"
regex = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
pgvector = { version = "0.4", features = ["sqlx"] }
lopdf = "0.41"
text-splitter = "0.31"
thiserror = "2"
