[package]
name = "runestone-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate"] }
neo4rs = "0.7"
log = "0.4"
regex = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
pgvector = { version = "0.4", features = ["sqlx"] }
lopdf = "0.34"
text-splitter = "0.31"
thiserror = "2"
sha2 = "0.11"
