[package]
name = "runestone-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "runestone-server"
path = "src/main.rs"

[lib]
name = "runestone_server"
path = "src/lib.rs"

[dependencies]
runestone-core = { path = "../runestone-core" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
